src/test/scala/wacc/front_end/valid_to_invalid/freeNull.wacc
# type declaration: lhs and rhs cannot both be an abstract type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(pair, pair) a = null ;
  free a
end

